Fixing collaps/expand behavior
- Start all podcasts collapsed
- Collapsed UI has a smaller episode art and shows the episode count

--- a/styles.css
+++ b/styles.css
@@ -43,14 +43,23 @@
     padding: 2px 2px 3px 2px;
     display: block;
 }
-
-.boc-collapsed-episode-container {
-    max-height: 0;
+.boc-episodes-list {
     overflow: hidden;
+    max-height: 600px;
+    transition:
+        max-height .3s, 
+        padding .3s,
+        border 1s;
     margin-bottom: 0;
+    border:#ccc 1px solid;
+    padding: .4rem;
+    border-radius: 4px;
+}
+.boc-collapsed-episode-container .boc-episodes-list {
+    max-height: 0;
     border-color: transparent;
-    padding: 0;
-    display: none;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .boc-podcast-container {
@@ -61,10 +70,14 @@
 .boc-podcast-art-container {
     flex: .2;
     min-width: 20%;
+    text-align: right;
 }
 
 .boc-podcast-art {
-    width: 100%;
+    width: auto;
+    max-height: 100%;
+    max-width: 100%;
+    transition: height .5s;
 }
 
 .boc-episodes-container {
@@ -72,7 +85,9 @@
     max-width: 80%;
     padding-left: 1rem;
 }
-
+.boc-collapsed-episode-container .boc-podcast-art {
+    max-height: 70px;
+}
 .boc-episodes-container .art {
     display: none;
 }
@@ -80,10 +95,13 @@
 .boc-episodes-container .episodecell {
     margin-bottom: .5rem;
     height: auto;
+    border-bottom: #ccc 1px solid;
+    padding-bottom: .3rem;
 }
 
 .boc-episodes-container .episodecell:last-child {
     margin-bottom: 0;
+    border-bottom: none;
 }
 
 .boc-episodes-container .cellcontent {
@@ -107,8 +125,14 @@
 
 .boc-podcast-title {
     color: #333;
-    margin-top: 0;
+    margin: 0;
+}
+
+.boc-podcast-subtitle {
+    margin: 0;
     margin-bottom: .5rem;
+    color: #b0b0b0;
+    text-transform: uppercase;
 }
 
 .boc-podcast-title.loading {
